@@ -24,7 +24,7 @@
 		</dependency>
 		<dependency>
 			<dependency-name>Ddth::Commons</dependency-name>
-			<dependency-version>0.1+</dependency-version>
+			<dependency-version>0.2+</dependency-version>
 			<dependency-description>
 			</dependency-description>
 		</dependency>
